# polyreview

./: .gitignore  BENCHMARK.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  git_setup.ps1  polyreview.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_diff.patch  sample_report.md
src/polyreview/: __init__.py  agents.py  cli.py  config.py  diff.py  llm.py  models.py  orchestrator.py  reporter.py
src/polyreview/bench/: __init__.py  runner.py  smart_mock.py
src/polyreview/bench/data/: samples.jsonl
src/polyreview/bench/runs/: baseline-mock.json  deepseek-v4-flash.json  gpt-5.4-nano.json  mock.json
tests/: test_bench.py  test_cache.py  test_diff.py  test_models.py  test_orchestrator.py  test_parser.py  test_properties.py
