[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "polyreview"
version         = "0.3.0"
description     = "Multi-agent AI code review tool — model-agnostic, OpenAI-compatible."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "PolyReview Contributors" }]
keywords        = ["ai", "agent", "code-review", "llm", "multi-agent", "mimo"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "rich>=13.7",
    "tomli>=2.0;python_version<'3.11'",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.98",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]

[project.scripts]
polyreview = "polyreview.cli:main"

[project.urls]
Homepage   = "https://github.com/hoaipham2580/polyreview"
Repository = "https://github.com/hoaipham2580/polyreview"
Issues     = "https://github.com/hoaipham2580/polyreview/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"polyreview.bench.data" = ["*.jsonl"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
